added render as host
